k8s/dev/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-backend
  namespace: retail-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retail-backend
  template:
    metadata:
      labels:
        app: retail-backend
    spec:
      containers:
        - name: retail-backend
          image: suissitakwa/retail-backend:dev-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 12        # allows up to 2 min for slow startup
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 20
            failureThreshold: 3

          # ── Resource limits ────────────────────────────────────
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: retail-backend
  namespace: retail-dev
spec:
  selector:
    app: retail-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
