k8s/dev/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-db
  namespace: retail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retail-db
  template:
    metadata:
      labels:
        app: retail-db
    spec:
      containers:
        - name: retail-db
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U user -d retail_db"]
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: retail-db
  namespace: retail
spec:
  selector:
    app: retail-db
  ports:
    - port: 5432
      targetPort: 5432
